--- a/examples/калькулятор.md
+++ b/examples/калькулятор.md
@@ -1,5 +1,9 @@
 Пример ввода: 2+2*2
-<sub>Вывод: 6</sub>
+```
+Вывод: 6
+```
 
 Вот код:
-<sub>вывести(число->подсчитать(ввести("Введите пример:")));</sub>
+```
+вывести(число->подсчитать(ввести("Введите пример:")));
+```
