--- a/examples/встроенные функции.md
+++ b/examples/встроенные функции.md
@@ -1,10 +1,38 @@
 ```
 @ модуль -> число
 число->модель(-5)
-число->косинус(-5)
-число->синус(-5)
-число->е(-5)
-число->пи(-5)
-число->экспонента(-5)
+число->косинус(3.14)
+число->синус(3.14)
+число->е()
+число->пи()
+число->экспонента(10)
 число->логарифм(арг: число) @ логарифм арг по основанию е
+```
+
+```
+@ no-модуль
+стоп(1.5)
+тип(арг: любое)
+_запуск_("2+2") @ запуск js кода
+```
+
+```
+@ модель -> массив
+массив->частота([10, 20, 10], арг: число | строка | булево | ничего) @ число повторяемых элементов в массив
+массив->обрезать([10, 20, 30, 40, 50], 0, 2)
+массив->сумма([1, 2, 3, 4, 5])
+массив->удалить([10, 20, 30], арг: число) @ удаляем элемент индекса арг
+```
+
+```
+@ модуль -> файл
+файл->открыть("index.js")
+файл->?(арг: строка): булево @ является элемент по пути к арг файлов
+```
+
+```
+@ модель -> папка
+папка->создать("./dir")
+папка->удалить("./dir")
+папка->читать(арг: строка): массив @ список элементов по пути к арг
 ```
